--- a/trainingCalender/index.html
+++ b/trainingCalender/index.html
@@ -23,25 +23,25 @@
     <div class="calender-wrap">
         <div class="calender-overlay">
             <div class="month">
-                <div id="tbCalendarY">2021</div>
+                <div id="tbCalendarY"></div>
                 <div>
                     <p onclick="prevCalendar()">&#60;&nbsp;&nbsp;</p>
-                    <p id="tbCalendarM">10</p>
+                    <p id="tbCalendarM"></p>
                     <p onclick="nextCalendar()">&nbsp;&nbsp;&#62;</p>
                 </div>
             </div>
             <div class="calender-content">
-                <table id="calendar" border="1" align="center">
+                <table id="calendar" align="center">
                     <tr></tr>
                     <tr>
-                        <td><font color ="#F79DC2">일</td>
+                        <td><font color ="tomato">일</td>
                         <td>월</td>
                         <td>화</td>
                         <td>수</td>
                         <td>목</td>
                         <td>금</td>
                         <td><font color ="skyblue">토</td>
-                    </tr> 
+                    </tr>
                 </table>
             </div>
         </div>
