달력 & 김버그 강의 & 모달

--- a/trainingCalender/index.html
+++ b/trainingCalender/index.html
@@ -45,7 +45,23 @@
                 </table>
             </div>
         </div>
+        <div class="modal">
+            <div class="modal-overlay">
+                <div class="modal-content">
+                    <div class="modal-header">2021/10/28<span class="closeBtn">X</span></div>
+                    <div class="modal-main">
+                        <ul>
+                            <li>간지나게 숨쉬기</li>
+                            <li>끝내주게 잠자기</li>
+                            <li>완벽하게 먹기</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="js/calendar.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/modal.js"></script>
 </body>
 </html>
