--- a/kimbug/step1.html
+++ b/kimbug/step1.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <a href="tel:01094609607">email</a>
-</body>
+  </head>
+  <body>
+    <dl>
+      <dt>
+        <dfn>이름</dfn>
+      </dt>
+      <dd>임동영</dd>
+      <dt>학교</dt>
+      <dd>세명컴퓨터고등학교</dd>
+    </dl>
+    <blockquote cite="http://naver.com">
+      안녕하세요 저는 임동영입니다. <br />
+      세명컴퓨터고등학교
+      <cite>임동영</cite>
+    </blockquote>
+    <q>임동영</q>
+  </body>
 </html>
