--- a/calendar/index.html
+++ b/calendar/index.html
@@ -1,119 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calendar</title>
     <style>
-        .calendar-wrap {
-            border: 1px solid #000000;
-            width: 800px;
-            margin: 50px auto 0;
-            padding: 20px;
-            box-sizing: border-box;
-            text-align: center;
-            border-radius: 8px;
-        }
-        .left, .date, .right {
-            display: inline-block;
-        }
-        .year {
-            font-size: 30px;
-            font-weight: bold;
-        }
-        .month {
-            font-size: 26px;
-        }
-        .calendar > table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 8px;
-            font-size: 18px;
-        }
-        th {
-            background-color: #c4c4c4;
-        }
+      .calendar-wrap {
+        border: 1px solid #000000;
+        width: 800px;
+        margin: 50px auto 0;
+        padding: 20px;
+        box-sizing: border-box;
+        text-align: center;
+        border-radius: 8px;
+      }
+      .left,
+      .date,
+      .right {
+        display: inline-block;
+      }
+      .year {
+        font-size: 30px;
+        font-weight: bold;
+      }
+      .month {
+        font-size: 26px;
+      }
+      .calendar > table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+      th,
+      td {
+        padding: 8px;
+        font-size: 18px;
+      }
+      th {
+        background-color: #c4c4c4;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="calendar-wrap">
-        <div class="top">
-            <div class="left">
-                <button onclick="prev()">&lt;</button>
-            </div>
-            <div class="date">
-                <div class="year"></div>
-                <div class="month"></div>
-            </div>
-            <div class="right">
-                <button onclick="next()">&gt;</button>
-            </div>
+      <div class="top">
+        <div class="left">
+          <button onclick="prev()">&lt;</button>
         </div>
-        <div class="calendar">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>일</th>
-                        <th>월</th>
-                        <th>화</th>
-                        <th>수</th>
-                        <th>목</th>
-                        <th>금</th>
-                        <th>토</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
+        <div class="date">
+          <div class="year"></div>
+          <div class="month"></div>
         </div>
+        <div class="right">
+          <button onclick="next()">&gt;</button>
+        </div>
+      </div>
+      <div class="calendar">
+        <table border="1">
+          <thead>
+            <tr>
+              <th>일</th>
+              <th>월</th>
+              <th>화</th>
+              <th>수</th>
+              <th>목</th>
+              <th>금</th>
+              <th>토</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
     </div>
-</body>
-<script>
-    const year = document.querySelector('.year');
-    const month = document.querySelector('.month');
-    const tbody = document.querySelector('tbody');
+  </body>
+  <script>
+    const year = document.querySelector(".year");
+    const month = document.querySelector(".month");
+    const tbody = document.querySelector("tbody");
 
     let currentDate = new Date();
     createCalendar();
 
     function prev() {
-        currentDate.setMonth(currentDate.getMonth() - 1);
-        createCalendar();
+      // 지난달
+      currentDate.setMonth(currentDate.getMonth() - 1);
+      createCalendar();
     }
 
     function next() {
-        currentDate.setMonth(currentDate.getMonth() + 1);
-        createCalendar();
+      // 다음달
+      currentDate.setMonth(currentDate.getMonth() + 1);
+      createCalendar();
     }
 
     function createCalendar() {
-        tbody.innerHTML = '';
-        year.textContent = currentDate.getFullYear();
-        month.textContent = currentDate.getMonth() + 1;
+      tbody.innerHTML = "";
+      year.textContent = currentDate.getFullYear();
+      month.textContent = currentDate.getMonth() + 1;
 
-        let firstDate = new Date(currentDate.getFullYear(), currentDate.getMonth(), 1);
-        const lastDate = new Date(currentDate.getFullYear(), currentDate.getMonth() + 1, 0);
+      let firstDate = new Date(
+        currentDate.getFullYear(),
+        currentDate.getMonth(),
+        1
+      );
+      const lastDate = new Date(
+        currentDate.getFullYear(),
+        currentDate.getMonth() + 1,
+        0
+      );
 
-        let week = 0;
+      let week = 0;
 
-        let row = null;
+      let row = null;
 
-        while (firstDate <= lastDate || week % 7 !== 0) {
-            if (week % 7 === 0) {
-                row = tbody.insertRow();
-            }
-
-            if (week % 7 === firstDate.getDay() && firstDate <= lastDate) {
-                let td = row.insertCell();
-                td.textContent = firstDate.getDate();
-                firstDate.setDate(firstDate.getDate() + 1);
-            } else {
-                row.insertCell();
-            }
-            week++;
+      while (firstDate <= lastDate || week % 7 !== 0) {
+        if (week % 7 === 0) {
+          row = tbody.insertRow();
         }
+
+        if (week % 7 === firstDate.getDay() && firstDate <= lastDate) {
+          let td = row.insertCell();
+          td.textContent = firstDate.getDate();
+          firstDate.setDate(firstDate.getDate() + 1);
+        } else {
+          row.insertCell();
+        }
+        week++;
+      }
     }
-</script>
+  </script>
 </html>
